[FIX]: Spacing fixes.

--- a/_sass/pages/1-about-page/index.sass
+++ b/_sass/pages/1-about-page/index.sass
@@ -2,6 +2,8 @@
   flex-wrap: wrap
 .about-hero
   flex-wrap: wrap
+  @media (max-width: $medium_bp)
+    padding-top: 2rem!important
   .text-section
     @media (min-width: $medium_bp)
       padding-left: 1rem
