--- a/_sass/pages/2-process-page/index.sass
+++ b/_sass/pages/2-process-page/index.sass
@@ -1,5 +1,7 @@
 .process-hero
   flex-wrap: wrap
+  @media (max-width: $medium_bp)
+    padding-top: 2rem!important
   .text-section
     @media (min-width: $medium_bp)
       padding-left: 1rem
