--- a/_sass/pages/5-contact-page/index.sass
+++ b/_sass/pages/5-contact-page/index.sass
@@ -1,6 +1,8 @@
 .contact-hero
   justify-content: space-between
   flex-wrap: wrap
+  @media (max-width: $medium_bp)
+    padding-top: 2rem!important
 .contact-info
   img
     width: 4rem
